--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>mrcopra</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>body{font-family:system-ui,Arial;background:#0f172a;color:#e2e8f0;display:grid;place-items:center;height:100vh;margin:0}h1{font-size:2.25rem;margin:0}p{opacity:.8}</style>
-</head>
-<body>
-  <main>
-    <h1>Hello from GitHub Pages</h1>
-    <p>mrcopra.com — coming soon ✨</p>
-  </main>
-</body>
-</html>
+<h1>Hello</h1>
